force-app/main/default/objects/MA_Page_Content__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <description>When false, this record is excluded from page content queries. Use to draft or retire content without deleting the record.</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>