force-app/main/default/objects/MA_Page_Content__c/fields/Content_Address__c.field-meta.xml
<CustomField>
    <fullName>Content_Address__c</fullName>
    <label>Content Address</label>
    <description>Formula-derived unique key: Offering_Key__c + '::' + Template_Type__c + '::' + Section_Key__c + '::' + Field_Key__c. Used as external ID for upsert-by-key.</description>
    <type>Formula</type>
    <formula>Offering_Key__c &amp; '::' &amp; TEXT(Template_Type__c) &amp; '::' &amp; Section_Key__c &amp; '::' &amp; Field_Key__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <returnType>Text</returnType>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>