force-app/main/default/objects/MA_Page_Content__c/fields/Draft_Value__c.field-meta.xml
<CustomField>
    <fullName>Draft_Value__c</fullName>
    <description>Unpublished working copy of this field, whatever its type. The live page never reads this column - it reads Text_Value__c / Rich_Value__c / JSON_Value__c, which always hold the published value. Publishing copies this across and clears it; discarding just clears it. That way an editor can work without the public page changing under them.</description>
    <label>Draft Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>