force-app/main/default/objects/MA_Page_Content__c/fields/Field_Key__c.field-meta.xml
<CustomField>
    <fullName>Field_Key__c</fullName>
    <description>Slug identifying the specific field within the section (e.g. headline, subhead, lede, chips). Matches the LWC getter name.</description>
    <label>Field Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>