force-app/main/default/objects/MA_Page_Content__c/fields/Industry_Key__c.field-meta.xml
<CustomField>
    <fullName>Industry_Key__c</fullName>
    <label>Industry Key</label>
    <description>Optional. When set, this record applies only when the viewer has selected this industry. Blank records apply to all industries (offering defaults).</description>
    <type>Text</type>
    <length>80</length>
</CustomField>