force-app/main/default/objects/MA_Page_Content__c/fields/JSON_Value__c.field-meta.xml
<CustomField>
    <fullName>JSON_Value__c</fullName>
    <label>JSON Value</label>
    <description>Structured content as a JSON string. Used for arrays (chips, route steps, capability cards, FAQ items, use-case cards, pitch chips) and nested objects.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>