force-app/main/default/objects/MA_Page_Content__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>Human-readable field name shown in the GTM Content Manager. Falls back to Field_Key__c when blank.</description>
    <label>Label</label>
    <length>120</length>
    <type>Text</type>
</CustomField>