force-app/main/default/objects/MA_Page_Content__c/fields/Last_Edited_By_Label__c.field-meta.xml
<CustomField>
    <fullName>Last_Edited_By_Label__c</fullName>
    <label>Last Edited By</label>
    <description>Display formula showing who last modified this record and when, for the Manager app content list.</description>
    <type>Formula</type>
    <formula>LastModifiedBy.Name &amp; ' · ' &amp; TEXT(DAY(LastModifiedDate)) &amp; '/' &amp; TEXT(MONTH(LastModifiedDate)) &amp; '/' &amp; TEXT(YEAR(LastModifiedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <returnType>Text</returnType>
</CustomField>