force-app/main/default/objects/MA_Page_Content__c/fields/Last_Published_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Published_Date__c</fullName>
    <description>Timestamp when this content was last published</description>
    <label>Last Published Date</label>
    <type>DateTime</type>
</CustomField>