force-app/main/default/objects/MA_Page_Content__c/fields/Pending_Delete__c.field-meta.xml
<CustomField>
    <fullName>Pending_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Marked for removal at the next publish. The row still exists and the live page still shows its value until then, so the mark can be taken back.</inlineHelpText>
    <label>Pending Delete</label>
    <type>Checkbox</type>
</CustomField>