force-app/main/default/objects/MA_Page_Content__c/fields/Rich_Value__c.field-meta.xml
<CustomField>
    <fullName>Rich_Value__c</fullName>
    <label>Rich Value</label>
    <description>HTML rich-text content rendered by lightning-formatted-rich-text. Used for body copy, lede paragraphs, and formatted blocks.</description>
    <type>Html</type>
    <length>32768</length>
</CustomField>