force-app/main/default/objects/MA_Page_Content__c/fields/Section_Key__c.field-meta.xml
<CustomField>
    <fullName>Section_Key__c</fullName>
    <label>Section Key</label>
    <description>Slug identifying the page section (e.g. hero, problem, mechanism, faq). Use __global__ for offering-level fields not tied to a section.</description>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
</CustomField>