force-app/main/default/objects/MA_Page_Content__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <label>Sort Order</label>
    <description>Display order within a section when multiple records share the same section (e.g. FAQ items, capability cards). Lower numbers appear first.</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>