force-app/main/default/objects/MA_Page_Content__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>"Draft"</defaultValue>
    <description>Draft or Published state for content versioning</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Published</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>