force-app/main/default/objects/MA_Page_Content__c/fields/Template_Type__c.field-meta.xml
<CustomField>
    <fullName>Template_Type__c</fullName>
    <label>Template Type</label>
    <description>Which page template this content belongs to. story | offerings-listing | industry-chooser | configurator</description>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>story</fullName>
                <label>Story</label>
            </value>
            <value>
                <fullName>offerings-listing</fullName>
                <label>Offerings Listing</label>
            </value>
            <value>
                <fullName>industry-chooser</fullName>
                <label>Industry Chooser</label>
            </value>
            <value>
                <fullName>configurator</fullName>
                <label>Configurator</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>