force-app/main/default/objects/MA_Page_Content__c/fields/Version_Number__c.field-meta.xml
<CustomField>
    <fullName>Version_Number__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Version number for change tracking</description>
    <label>Version Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>