force-app/main/default/objects/MA_Page_Content__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Offering_Key__c</columns>
    <columns>Template_Type__c</columns>
    <columns>Section_Key__c</columns>
    <columns>Field_Key__c</columns>
    <columns>Field_Type__c</columns>
    <columns>Active__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All GTM Page Content</label>
</ListView>